hphp/hack/test/typecheck/compile_test_cast.php.exp
File "compile_test_cast.php", line 28, characters 12-14:
Encountered unexpected token `$x3`. (Parsing[1002])
File "compile_test_cast.php", line 28, characters 10-10:
Unbound name: `A` (a global constant) (Naming[2049])
File "compile_test_cast.php", line 26, characters 9-18:
Cannot cast a value of type `A` to string.
Only primitives may be used in a `(string)` cast.
If you are trying to cast a Stringish type, please use `stringish_cast`.
This functionality is being removed from HHVM. (Typing[4281])
File "compile_test_cast.php", line 28, characters 10-10:
Unbound global constant (Typing) (Typing[4106])
